[package]
name = "see-ell-eye"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
